fixed the spacing between the thank you message and to top of the screen, making it look less cluttered

--- a/screen.css
+++ b/screen.css
@@ -82,6 +82,7 @@ form {
   margin: auto;
   margin-top: 0.889em;
   align-content: center;
+  position: fixed center;
 }
 
 form, li {
@@ -122,6 +123,15 @@ form, li {
   margin-top: 1.424em;
   letter-spacing: 0.3em;
   color: white;
+  width: 300px;
+  margin: auto;
+  margin-top: 0.889em;
+  align-content: center;
+  position: fixed center;
+}
+
+#contact-form {
+  margin-top:3em;
 }
 
 #birthday {
